dec 24 - collection framework